// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly the date field 1`] = `
<section>
  <div>
    <p>
      <strong>
        Date of birth
      </strong>
      : 
      12/12/2012
    </p>
  </div>
</section>
`;

exports[`renders correctly the name field 1`] = `
<section>
  <div>
    <p>
      <strong>
        Name
      </strong>
      : 
      Mario Rossi
    </p>
  </div>
</section>
`;
